--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+.users{
+    margin-left: 70px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
 .user{
     margin-top: 30px ;
     background-color: gray;
