--- a/post-details.css
+++ b/post-details.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+.divBody{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 .divID {
     width: 100%;
     height: 230px;
@@ -34,4 +40,24 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+.divButton{
+    width: 100%;
+    height: 10vh;
+    gap: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+button{
+    background-color: red;
+    width: 30vw;
+    height: 10vh;
+    border-radius: 10px;
+    font-size: 2vh;
+    color: white;
+}
+button:hover{
+    background-color: blue;
+    transition: 0.5s;
 }
